<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/addExpenseFragment"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add_expense" />
    <item
        android:id="@+id/expenseHistoryFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/history" />
    <item
        android:id="@+id/insightsFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/insights" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
</menu>
